<resources>
    <string name="app_name">Live700</string>
    <string name="需要存储权限">需要存储权限</string>
    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="checkUpdateFail">检查更新失败，请重试!</string>
    <string name="no_update">不更新</string>
    <string name="go_open">去打开</string>
    <string name="need_notification_permission">需要通知权限才能更新，是否去打开？</string>
    <string name="downloading">下载中...</string>
    <string name="click_retry">点击重试</string>
    <string name="click_install">点击安装</string>
    <string name="loading_wait">正在下载，请稍等</string>
    <string name="version">版本</string>
    <string name="now_downloading">正在下载</string>
    <string name="new_version">新版本</string>
    <string name="downloaded_click_install">下载完成，点击安装</string>
    <string name="download_fail_click_retry">下载失败，点击重试</string>
    <string name="banbengengxin">版本更新</string>
    <string name="banbenhao">版本2.6.51</string>
    <string name="gongnengjieshao">功能介绍</string>
    <string name="xukexieyi">密信软件许可及服务协议</string>
    <string name="copyright">Copyright © 2014-2021，杭州安司源科技有限公司.AII Rights Reserved.</string>
    <string name="huanggezhanghaodenglu">换个新账号登录</string>
    <string name="sousuoyouliaohao">搜索友聊号</string>
    <string name="tongxunlu">通讯录</string>
    <string name="tianjiatongxunlu">添加通讯录内用户为好友</string>
    <string name="xinxi">信息</string>
    <string name="xindequngonggao">新的群公告</string>
    <string name="quxiao">取消</string>
    <string name="save">保存</string>
    <string name="pingtaigonggao">平台公告</string>
    <string name="jiarufuwuqi">用ID 加入服务器</string>
    <string name="tianxiefuwuqi">填写服务器ID</string>
    <string name="saomiaoerweima">扫描二维码，注册或登录</string>
    <string name="saomiaoerweima_2">扫描二维码</string>
    <string name="jiaru">加入</string>
    <string name="jiamichat">加密聊天</string>
    <string name="benqunyijinzhijietu">本群已禁止截图</string>
    <string name="nijiangfaxiaoxigei">你将发消息给：</string>
    <string name="shanchu">删除</string>
    <string name="zhuanfa">转发</string>
    <string name="zhidinghuihua">固定置顶会话</string>
    <string name="xiaoxitongzhi">消息通知音声</string>
    <string name="qingchubendishuju">清除本地数据</string>
    <string name="danliaowenjiancun">单聊文件存储容量</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="sousuohaoyou">搜索好友</string>
    <string name="queding">确定</string>
    <string name="fankuileixing">反馈类型</string>
    <string name="jianyi">建议</string>
    <string name="cuowu">错误</string>
    <string name="qita">其他</string>
    <string name="fankuineirong">反馈内容</string>
    <string name="xiangximiaosu">请尽量详细描述反馈内容，我们将尽快为您处理</string>
    <string name="wentijietu">问题截图</string>
    <string name="ganxiebaogui">感谢您提供宝贵的建议，我们会尽快修复完善您提出的 建议及问题！</string>
    <string name="tijiao">提交</string>
    <string name="youliaojiandan">Live700让通信如此简单</string>
    <string name="qudenglu">去登录</string>
    <string name="zhaohuimima">找回密码</string>
    <string name="qingshurushoujihao">请输入手机号</string>
    <string name="qingshuruyanzhengma">请输入验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="tijiaobingdenglu">提交并登录</string>
    <string name="yulanzitidaxiao">预览字体大小</string>
    <string name="tuodongxiamian">拖动下面的滑块，可设置 字体大小</string>
    <string name="gerenxinx">个人信息</string>
    <string name="zhanghao">账号</string>
    <string name="dianhua">电话</string>
    <string name="youxiang">邮箱</string>
    <string name="weishezhi">未设置</string>
    <string name="dizhi">地址</string>
    <string name="beizhu">备注</string>
    <string name="qingshurubeizhu">请输入备注</string>
    <string name="xingbie">性别</string>
    <string name="laheihaoyou">拉黑好友</string>
    <string name="jinyan">禁言</string>
    <string name="shanchuhaoyou">删除好友</string>
    <string name="qingshuru">请输入</string>
    <string name="baocun">保存</string>
    <string name="sousuo">搜索好友/群组</string>
    <string name="sousuo_title">搜索：</string>
    <string name="add_haoyou">添加好友</string>
    <string name="quanbuchengyuan">全部群成员 (3/2000)</string>
    <string name="wo">我</string>
    <string name="qungonggao">群公告</string>
    <string name="我知道了">我知道了</string>
    <string name="huanyingdajiajinqun">欢迎大家进群</string>
    <string name="xiaoximiandarao">消息免打扰</string>
    <string name="qunchengyuanjinyan">群成员禁言</string>
    <string name="fanyanpinlvxianzhi">发言频率限制</string>
    <string name="buxianzhi">不限制</string>
    <string name="sousuoliaotianjilu">搜索聊天记录</string>
    <string name="qunqiandao">群签到</string>
    <string name="yikaiqi">已开启</string>
    <string name="tuichuqunzu">退出群组</string>
    <string name="yuanchengxiaohui">远程销毁群消息</string>
    <string name="meiyoujilu">没有记录</string>
    <string name="xinjianqunfa">新建群发</string>
    <string name="xiaoxi">消息</string>
    <string name="liaotian">聊天</string>
    <string name="haoyou">好友</string>
    <string name="lianxiren">联系人</string>
    <string name="faxian">发现</string>
    <string name="wode">我的</string>
    <string name="huanyindenglu">欢迎登录</string>
    <string name="zhanghaodenglu">账号登录</string>
    <string name="youliaohaodenglu">友聊号登录</string>
    <string name="qingshuruzhanghao">请输入账号/手机号</string>
    <string name="wangjimima">忘记密码?</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="woyiyuedutongyi">我已阅读并同意</string>
    <string name="yonghuxieyi">《用户协议》</string>
    <string name="yinsizhengce">《隐私政策》</string>
    <string name="ji">及</string>
    <string name="wodebiaoqing">我的表情</string>
    <string name="bianji">编辑</string>
    <string name="tietuguanli">贴图管理</string>
    <string name="xingming">姓名</string>
    <string name="qingtianxie">请填写1～14位，中文、字母和数字的任意组合</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="baomi">保密</string>
    <string name="buxiangtoulu">不想透露</string>
    <string name="ninyibangdingshoujihao">您已经绑定手机号</string>
    <string name="qingshurunindemima">请输入您的密码</string>
    <string name="mimacuowu">您输入的旧密码错误，剩下次数9次</string>
    <string name="qinggenggainindeshoujihao">请输入您的更改的手机号</string>
    <string name="shoujihaocuowu">您输入的手机号码错误，请重新输入</string>
    <string name="qingshurujiumima">请输入旧密码</string>
    <string name="ninshurudejiumimacuowu">您输入的旧密码错误，剩下次数9次</string>
    <string name="qingshuruxinmima">请输入新密码(8~16位的密码，至少包含字母和数字)</string>
    <string name="qingshuruzhanghaodaxiaoxie">请输入账号1-15位大小写英文字母或数字</string>
    <string name="shoujihao">手机号: </string>
    <string name="mima">密码: </string>
    <string name="ninyichuangliyigequnzu">您已创立了一个群组</string>
    <string name="qunzukeyi">群组可以：</string>
    <string name="qunzhidingxiaoxi">群置顶消息可设置五则</string>
    <string name="duihuaxinxibaocun">对话信息保存七日</string>
    <string name="qunguanlikejinyan">群管理员可禁言、踢人</string>
    <string name="jinzhichizhongguoshoujihao">目前仅支持中国手机号码</string>
    <string name="paizhao">拍照</string>
    <string name="congxiangcexuanqu">从相册选取</string>
    <string name="qingkongjilu">清空记录</string>
    <string name="shanchuxiaoxi">删除消息</string>
    <string name="duoxuanxiaoxi">多选消息</string>
    <string name="faqiqunliao">发起群聊</string>
    <string name="tianjiahaoyou">添加好友</string>
    <string name="saoyisao">扫一扫</string>
    <string name="jingshengweiguanliyuan">晋升为管理员</string>
    <string name="congqunzhongyichu">从群中移出</string>
    <string name="fuzhi">复制</string>
    <string name="tianjiabiaoqing">添加表情</string>
    <string name="chakanjianjie">查看简介</string>
    <string name="kaiqitongzhi">开启通知</string>
    <string name="qingkonglishijilu">清空历史记录</string>
    <string name="tuichuqunliao">退出群聊</string>
    <string name="faxiaoxiheyiduhuizhi">发送消息已收和已读回执</string>
    <string name="xianshishoujihaogeihaoyou">显示手机号给好友</string>
    <string name="tongguoyouliaohaojiawo">通过友聊号加我</string>
    <string name="fuwuqiyikaiqi">服务器已开启</string>
    <string name="tongguoshoujihaosuo">通过手机号搜索到我</string>
    <string name="jiangerweima">将二维码放入框内，即可自动扫描</string>
    <string name="zhanghaozhuce">账号注册</string>
    <string name="mimabaocunshixiao">密码保存时效</string>
    <string name="xiugaimima">修改密码</string>
    <string name="yingyongsuo">应用锁</string>
    <string name="guanbi">关闭</string>
    <string name="zhuxiaozhanghao">注销账号</string>
    <string name="youhoutaikongzhi">由后台控制</string>
    <string name="meifenzhong">每分钟10条</string>
    <string name="meifenzhongfive">每分钟5条</string>
    <string name="anquanshezhi">安全设置</string>
    <string name="yinsishezhi">隐私设置</string>
    <string name="liaotianshezhi">聊天设置</string>
    <string name="xitongshezhi">系统设置</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="qinglihuancun">清理缓存</string>
    <string name="guanyuyouliao">关于友聊</string>
    <string name="banben">版本1.0.0</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="youliaohao">友聊号: </string>
    <string name="yiqilai">一起来 友聊 跟我聊聊心情 谈谈心事</string>
    <string name="youliaoliaotianshi">友聊聊天室</string>
    <string name="shiyongduiduan">使用端对端加密，将以强大的安全性加密保护你的讯息隐私，这表示着只有你和对话的好友才拥有所有聊天讯息。我们将保护用户隐私为首要任务，不断提高本身服务水平，努力成为最好的保障用户隐私的即时通讯软件平台。</string>
    <string name="baocunerweima">保存二维码</string>
    <string name="fuzhilianjie">复制链接</string>
    <string name="liaotianwenjian">聊天文件</string>
    <string name="yuanchengxiaohuixiaoxi">远程销毁消息</string>
    <string name="bianjixiaoxi">编辑消息</string>
    <string name="nihao">您好...</string>
    <string name="fasong">发送</string>
    <string name="benqunjinyan">本群禁言，可私聊群主或管理员申请开启发言</string>
    <string name="zhaopian">照片</string>
    <string name="paishe">拍摄</string>
    <string name="shipin">视频</string>
    <string name="shoucang">收藏</string>
    <string name="huifu">回复</string>
    <string name="tianjia">添加</string>
    <string name="zhiding">置顶</string>
    <string name="huihuazhiding">会话置顶</string>
    <string name="shanchuhuihua">删除会话</string>
    <string name="sheweiyidu">设为已读</string>
    <string name="yuanchengxiaohuiwodexiaoxi">远程销毁我的消息</string>
    <string name="yuanchengxiaohuiqunxiaoxi">远程销毁群消息</string>
    <string name="benxitongzidongdengchu">本系统将自动登出</string>
    <string name="congqunzuzhongyichu">从群组中移除</string>
    <string name="dengluxuyaozhushebeiyanzheng">登录需要主设备验证</string>
    <string name="yangzhengmayifasongdao">验证码已发送到主设备 设备名称</string>
    <string name="qingshuruqunzumingcheng">请输入群组名称</string>
    <string name="jinshanchuziji">仅删除自己</string>
    <string name="faxianxinbanben">发现最新版本</string>
    <string name="bencigengxin">本次更新：</string>
    <string name="lijigengxin">立即更新</string>
    <string name="yihouzaishuo">以后再说</string>
    <string name="sousuoxiaoxihuoyonghu">搜索消息或用户</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="群发助手">群发助手</string>
    <string name="分享邀请码" formatted="false">分享邀请码</string>
    <string name="设置">设置</string>
    <string name="建议反馈">建议反馈</string>
    <string name="全选同意">全选同意</string>
    <string name="全选拒绝">全选拒绝</string>
    <string name="暂无通知">暂无通知</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="zimuheshuzizuhe">8-16位字母和数字组合</string>
    <string name="请输入邀请码">请输入邀请码</string>
    <string name="邀请码不能为空">邀请码不能为空</string>
    <string name="tianxieyanzhengma">填写验证码</string>
    <string name="yanzhengmayifasongdao">验证码已发送到： </string>
    <string name="xiayibu">下一步</string>
    <string name="jujue">拒绝</string>
    <string name="tongguo">通过</string>
    <string name="yidu">已读</string>
    <string name="xiaoxiweidu">消息未读</string>
    <string name="wenjianming">文件名</string>
    <string name="xiazai">下载</string>
    <string name="wojiarudequn">我加入的群(1)</string>
    <string name="caogao">草稿:</string>
    <string name="xiangqing">详情</string>
    <string name="niyitongyiduifangdehaoyoushenqing">你已同意对方的好友申请</string>
    <string name="tongyi">同意</string>
    <string name="zaifayitiao">再发一条</string>
    <string name="yibianji">(已编辑)</string>
</resources>