<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_white_15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/huihuazhiding"
            android:textColor="#107CF2"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/shanchuhuihua"
            android:textColor="#107CF2"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/sheweiyidu"
            android:textColor="#107CF2"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/yuanchengxiaohuiwodexiaoxi"
            android:textColor="#107CF2"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/yuanchengxiaohuiqunxiaoxi"
            android:textColor="#107CF2"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dialog_white_15dp"
        android:gravity="center"
        android:text="@string/quxiao"
        android:textColor="#107CF2"
        android:textSize="18dp" />
</LinearLayout>