<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_4"
        app:cardCornerRadius="@dimen/dp_10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvEdit"
                android:layout_width="@dimen/dp_60"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_bj"
                android:gravity="center"
                android:text="@string/bianji"
                android:textColor="@color/color_333333"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tvSend"
                android:layout_width="@dimen/dp_60"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_zf"
                android:gravity="center"
                android:text="@string/zhuanfa"
                android:textColor="@color/color_333333" />

            <TextView
                android:id="@+id/tvCopy"
                android:layout_width="@dimen/dp_60"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_fz"
                android:gravity="center"
                android:text="@string/fuzhi"
                android:textColor="@color/color_333333"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAddE"
                android:layout_width="@dimen/dp_60"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_tjbq"
                android:gravity="center"
                android:text="@string/tianjiabiaoqing"
                android:textColor="@color/color_333333"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvDel"
                android:layout_width="@dimen/dp_60"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_xh"
                android:gravity="center"
                android:text="@string/shanchu"
                android:textColor="#DA3C40" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>