<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/xingming"
        android:textColor="@color/text_second"
        android:textSize="@dimen/dp_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNameTitle"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_white_round_8"
        android:paddingLeft="@dimen/dp_22"
        android:paddingRight="@dimen/dp_22">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/qingtianxie"
            android:lines="1"
            android:maxLength="14"
            android:textColor="@color/text_main"
            android:textSize="@dimen/dp_12" />

        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_10"
            android:scaleType="center"
            android:src="@drawable/btn_clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvGenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:layout_marginLeft="@dimen/dp_22"
        android:text="@string/xingbie"
        android:textColor="@color/text_second"
        android:textSize="@dimen/dp_11" />

    <RadioGroup
        android:id="@+id/rg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGenderTitle"
        android:background="@drawable/bg_white_round_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_32"
        android:paddingRight="@dimen/dp_10">


        <RadioButton
            android:id="@+id/rbm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/tab_select"
            android:checked="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:text="@string/nan"
            android:textSize="@dimen/dp_12" />

        <RadioButton
            android:id="@+id/rbf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/tab_select"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:text="@string/nv"
            android:textSize="@dimen/dp_12" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/tab_select"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:text="@string/buxiangtoulu"
            android:textSize="@dimen/dp_12" />
    </RadioGroup>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_marginEnd="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@drawable/shape_gradient_red_24"
        android:gravity="center"
        android:text="@string/baocun"
        android:textColor="@color/text_white"
        android:textSize="@dimen/dp_16" />

</RelativeLayout>